--- a/index.less
+++ b/index.less
@@ -1,5 +1,10 @@
-// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
+// Colors
 // ------------------------------------------------------------------
+// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
+
+@base16-gray-dark-ui: #232830;
+@base16-gray-darker-ui: #1C1F26;
+@base16-gray-light-ui: #727A84;
 
 @base16-00: #2B303B; // Dark Gray
 @base16-01: #343D46;
@@ -24,7 +29,6 @@
 }
 
 .editor {
-
   background-color: @base16-00;
   color: @base16-07;
 
@@ -35,29 +39,27 @@
 
   .gutter {
     background-color: @base16-00;
-    border-right: 2px solid @base16-00;
 
     .line-number {
       padding: 0 0.25em 0 0.5em;
-      &.cursor-line {
-        background-color: @base16-00;
-        color: @base16-07;
-      }
 
       &.cursor-line-no-selection {
-        color: @base16-07;
+        color: @base16-gray-light-ui;
       }
-    }
+
+    } // .line-number
+
+  } // .gutter
+
+  .cursor-line {
+    background-color: @base16-01;
+    color: @base16-07;
   }
 
   .gutter .line-number.folded,
   .gutter .line-number:after,
   .fold-marker:after {
     color: @base16-03;
-  }
-
-  .scroll-view {
-    padding-left: 10px;
   }
 
   .invisible {
@@ -71,7 +73,7 @@
   .selection .region {
     background-color: lighten(@base16-00, 10%);
   }
-}
+} // .editor
 
 .editor .search-results .marker .region {
   background-color: transparent;
