--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -1,5 +1,10 @@
-// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
+// Colors
 // ------------------------------------------------------------------
+// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
+
+@base16-gray-dark-ui: #232830;
+@base16-gray-darker-ui: #1C1F26;
+@base16-gray-light-ui: #727A84;
 
 @base16-00: #2B303B; // Dark Gray
 @base16-01: #343D46;
