reorganization of files

--- a/index.less
+++ b/index.less
@@ -1,327 +1,7 @@
-// Colors
 // ------------------------------------------------------------------
-// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
-
-@base16-gray-dark-ui: #232830;
-@base16-gray-darker-ui: #1C1F26;
-@base16-gray-light-ui: #727A84;
-
-@base16-00: #2B303B; // Dark Gray
-@base16-01: #343D46;
-@base16-02: #4F5B66;
-@base16-03: #65737E; // Gray Comment Text
-@base16-04: #A7ADBA;
-@base16-05: #C0C5CE; // Gray
-@base16-06: #DFE1E8;
-@base16-07: #EFF1F5; // Light Gray White
-@base16-08: #BF616A; // Red
-@base16-09: #D08770; // Orange
-@base16-0A: #EBCB8B; // Yellow
-@base16-0B: #A3BE8C; // Light Lime Green
-@base16-0C: #96B5B4; // Mintish Teal
-@base16-0D: #8FA1B3; // Gray Light Blue Text
-@base16-0E: #B48EAD; // Pinkish Purple
-@base16-0F: #AB7967;
-
-.editor-colors {
-  background-color: @base16-02;
-  color: @base16-07;
-}
-
-.editor {
-  background-color: @base16-00;
-  color: @base16-07;
-
-  .invisible-character,
-  .indent-guide {
-    color: @base16-01;
-  }
-
-  .gutter {
-    background-color: @base16-00;
-
-    .line-number {
-      padding: 0 0.25em 0 0.5em;
-
-      &.cursor-line-no-selection {
-        color: @base16-gray-light-ui;
-      }
-
-    } // .line-number
-
-  } // .gutter
-
-  .cursor-line {
-    background-color: @base16-01;
-    color: @base16-07;
-  }
-
-  .gutter .line-number.folded,
-  .gutter .line-number:after,
-  .fold-marker:after {
-    color: @base16-03;
-  }
-
-  .invisible {
-    color: @base16-05;
-  }
-
-  .cursor {
-    color: @base16-05;
-  }
-
-  .selection .region {
-    background-color: lighten(@base16-00, 10%);
-  }
-} // .editor
-
-.editor .search-results .marker .region {
-  background-color: transparent;
-  border: 1px solid @base16-03;
-}
-
-.editor .search-results .marker.current-result .region {
-  border: 1px solid #fff;
-}
-
-.comment {
-  color: @base16-03;
-}
-
-.entity {
-
-  &.name.type {
-    color: @base16-0A;
-    text-decoration: underline;
-  }
-
-  &.other.inherited-class {
-    color: @base16-0B;
-  }
-}
-
-.keyword {
-  color: @base16-0E;
-
-  &.control {
-    color: @base16-0E;
-  }
-
-  &.operator {
-    color: @base16-05;
-  }
-
-  &.other.special-method {
-    color: @base16-0D;
-  }
-
-  &.other.unit {
-    color: @base16-09;
-  }
-}
-
-.storage {
-  color: @base16-0E;
-}
-
-.constant {
-  color: @base16-09;
-
-  &.character.escape {
-    color: @base16-0C;
-  }
-
-  &.numeric {
-    color: @base16-09;
-  }
-
-  &.other.color {
-    color: @base16-0C;
-  }
-
-  &.other.symbol {
-    color: @base16-0B;
-  }
-}
-
-.variable {
-  color: @base16-08;
-
-  &.interpolation {
-    color: @base16-0F;
-  }
-
-  &.parameter.function {
-    color: @base16-05;
-  }
-}
-
-.invalid.illegal {
-  background-color: @base16-08;
-  color: @base16-00;
-}
-
-.string {
-  color: @base16-0B;
-
-
-  &.regexp {
-    color: @base16-0C;
-
-    .source.ruby.embedded {
-      color: @base16-09;
-    }
-  }
-
-  &.other.link {
-    color: @base16-08;
-  }
-}
-
-.punctuation {
-
-  &.definition {
-    &.comment {
-      color: @base16-03;
-    }
-
-    &.string,
-    &.variable,
-    &.parameters,
-    &.array {
-      color: @base16-05;
-    }
-
-    &.heading,
-    &.identity {
-      color: @base16-0D;
-    }
-
-    &.bold {
-      color: @base16-0A;
-      font-style: bold;
-    }
-
-    &.italic {
-      color: @base16-0E;
-      font-style: italic;
-    }
-  }
-
-  &.section.embedded {
-    color: @base16-0F;
-  }
-
-}
-
-.support {
-  &.class {
-    color: @base16-0A;
-  }
-
-  &.function  {
-    color: @base16-0C;
-
-    &.any-method {
-      color: @base16-0D;
-    }
-  }
-}
-
-.entity {
-
-  &.name.function {
-    color: @base16-0D;
-  }
-
-  &.name.class, &.name.type.class {
-    color: @base16-0A;
-  }
-
-  &.name.section {
-    color: @base16-0D;
-  }
-
-  &.name.tag {
-    color: @base16-08;
-  }
-
-  &.other.attribute-name {
-    color: @base16-09;
-
-    &.id {
-      color: @base16-0D;
-    }
-  }
-}
-
-.meta {
-  &.class {
-    color: @base16-0A;
-  }
-
-  &.link {
-    color: @base16-09;
-  }
-
-  &.require {
-    color: @base16-0D;
-  }
-
-  &.selector {
-    color: @base16-0E;
-  }
-
-  &.separator {
-    background-color: @base16-00;
-    color: @base16-05;
-  }
-}
-
-.none {
-  color: @base16-05;
-}
-
-.markup {
-  &.bold {
-    color: @base16-09;
-    font-style: bold;
-  }
-
-  &.changed {
-    color: @base16-0E;
-  }
-
-  &.deleted {
-    color: @base16-08;
-  }
-
-  &.italic {
-    color: @base16-0E;
-    font-style: italic;
-  }
-
-  &.heading .punctuation.definition.heading {
-    color: @base16-0D;
-  }
-
-  &.inserted {
-    color: @base16-0B;
-  }
-
-  &.list {
-    color: @base16-08;
-  }
-
-  &.quote {
-    color: @base16-09;
-  }
-
-  &.raw.inline {
-    color: @base16-0B;
-  }
-}
-
-.editor.mini .scroll-view {
-  padding-left: 1px;
-}
+// Syntax Theme Base16 Ocean
+// ------------------------------------------------------------------
+
+@import "stylesheets/colors";
+@import "stylesheets/base";
+@import "stylesheets/syntax-variables";
