--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,17 +1,25 @@
-@base03: #002b36;
-@base02: #073642;
-@base01: #586e75;
-@base00: #657b83;
-@base0: #839496;
-@base1: #93a1a1;
-@base2: #eee8d5;
-@base3: #fdf6e3;
+// ------------------------------------------------------------------
+// Colors
+// ------------------------------------------------------------------
+// Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
 
-@yellow: #b58900;
-@orange: #cb4b16;
-@red: #dc322f;
-@magenta: #d33682;
-@violet: #6c71c4;
-@blue: #268bd2;
-@cyan: #2aa198;
-@green: #859900;
+@base16-gray-dark-ui: #232830;
+@base16-gray-darker-ui: #1C1F26;
+@base16-gray-light-ui: #727A84;
+
+@base16-00: #2B303B; // Dark Gray
+@base16-01: #343D46;
+@base16-02: #4F5B66;
+@base16-03: #65737E; // Gray Comment Text
+@base16-04: #A7ADBA;
+@base16-05: #C0C5CE; // Gray
+@base16-06: #DFE1E8;
+@base16-07: #EFF1F5; // Light Gray White
+@base16-08: #BF616A; // Red
+@base16-09: #D08770; // Orange
+@base16-0A: #EBCB8B; // Yellow
+@base16-0B: #A3BE8C; // Light Lime Green
+@base16-0C: #96B5B4; // Mintish Teal
+@base16-0D: #8FA1B3; // Gray Light Blue Text
+@base16-0E: #B48EAD; // Pinkish Purple
+@base16-0F: #AB7967;
