--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -2,7 +2,13 @@
 // Syntax Variables
 // ------------------------------------------------------------------
 
+@import "colors";
+
+@syntax-background-color: @base16-07;
+
 @syntax-color-renamed: @base16-0D;
 @syntax-color-added: @base16-0B;
 @syntax-color-modified: @base16-09;
 @syntax-color-removed: @base16-08;
+
+@syntax-wrap-guide-color: @base16-01;
