fixing less error

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -19,7 +19,7 @@
     background-color: @base16-00;
 
     .line-number {
-      padding: 0 0.25em 0 0.5em;
+    //  padding: 0 0.25em 0 0.5em;
 
       &.cursor-line-no-selection {
         color: @base16-gray-light-ui;
@@ -59,7 +59,7 @@
 }
 
 .editor .search-results .marker.current-result .region {
-  border: 1px solid #fff;
+  border: 1px solid @white;
 }
 
 .comment {
