--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -3,6 +3,8 @@
 // ------------------------------------------------------------------
 // Base16 - Ocean - http://chriskempson.github.io/base16/#ocean
 
+@white: #ffffff;
+
 @base16-gray-dark-ui: #232830;
 @base16-gray-darker-ui: #1C1F26;
 @base16-gray-light-ui: #727A84;
